static/layout.css
@import url('https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&display=swap');
.comic-relief-regular {
  font-family: "Comic Relief", system-ui;
  font-weight: 400;
  font-style: normal;
}

.comic-relief-bold {
  font-family: "Comic Relief", system-ui;
  font-weight: 700;
  font-style: normal;
}
.h3pc{
    display: none;
}
.h3mob{
    display: block;
    color: rgb(69, 69, 223);
    background-color: rgb(100, 4, 4);
    font-size: 1.5rem;
    font-weight: 800;
    padding: 10px;
    margin: 4px auto;
}
input, button, select {
    width: 90%;
    max-width: 400px;
    padding: 10px;
    margin: 4px auto;
    display: inline-block;
    font-size: 1rem;
}
div.sidepanel {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    align-content: center;
    left: 0;
    top: 0;
    width: 90vh;
    height: 40vh;
    background-color: rgb(100, 4, 4);
    color: rgb(66, 66, 172);
    padding: 5px;
    box-sizing: border-box;
    margin: 4px;
}
@media (min-width: 768px){
    .h3pc{
        display: block;
    }
    .h3mob{
        display: none;
    }
    .downup{
        margin-top: 5px;
        display: flex;
        justify-content: center;
        gap: 1px;
        flex-direction: row;
    }
    input, button, select, .below {
    max-width: 200px;
    padding: 2px;
    margin: 2px auto;
    font-size: auto;
    display: inline-block;
    text-align: center;
    }
    div.sidepanel {
    position: fixed;
    align-items: center;
    align-content: center;
    text-align: center;
    left: 0;
    top: 0;
    width: 20vh;
    height: 98vh;
    background-color: rgb(100, 4, 4);
    color: rgb(66, 66, 172);
    padding: 5px;
    box-sizing: border-box;
    margin: 4px;
    }
}
img, .box {
width: 100%;
box-sizing: border-box;
}
body > * {
    max-width: 600px;
    margin: auto;
}
body{
            background-color: firebrick;
            margin: 0;
            font-family: 'Comic Relief', cursive;
            text-align: center;
            color: white;
            font-weight: 500;
        }
        h1{
            text-align: center;
            color: white;
            text-decoration: none;
        }
        h2{
            color: white;
            text-align: center;
            text-decoration: none;
        }
div.scroll {
    overflow: auto;
    height: 50vh;
    width: 90%;
    border: 1px solid black;
    background-color: rgb(184, 58, 58);
    margin: 5px auto;
    text-align: center;
}
form{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.sidepanel li{
    text-align: center; 
}
div.sidepanel ul{
    padding-left: 0;
    list-style-type: none;
}
ul{
    list-style-type: none;
    padding-left: 0;
    margin: 0;
}

